hide cookie notice
Signed-off-by: fantao <phantasy015@qq.com>

--- a/web/index.html
+++ b/web/index.html
@@ -134,7 +134,7 @@
         line-height: 1.15;
       }
     </style>
-    <section id="cookie-notice">
+    <!--section id="cookie-notice">
       <div class="container">
         <p>Google uses cookies to deliver its services, to personalize ads, and to analyze traffic. You can
           adjust your privacy controls anytime in your
@@ -144,7 +144,7 @@
         </p>
         <button id="cookie-consent">Okay</button>
       </div>
-    </section>
+    </section-->
   </div>
   <script>
     function _setCookie(name, value) {
