--- a/web/index.html
+++ b/web/index.html
@@ -261,7 +261,7 @@
         }
       }
     </style>
-    <img src="icons/Icon-192.png" alt="Loading indicator..." />
+    <img src="icons/chatgpt_red.png" alt="Loading indicator..." />
   </div>
   <script>
     window.addEventListener('load', function () {
