change app name
Signed-off-by: fantao <phantasy015@qq.com>

--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
 <head>
   <base href="/">
   <meta charset="UTF-8">
-  <title>Flutter Gallery</title>
+  <title>App Gallery</title>
   <meta name="description" content="A resource to help developers evaluate and use Flutter.">
   <link rel="manifest" href="manifest.json">
 
