enable custom avatar and fix oss delete
Signed-off-by: fantao <phantasy015@qq.com>

--- a/web/index.html
+++ b/web/index.html
@@ -48,6 +48,8 @@
     document.body.classList.add(theme);
   </script>
 
+  <script src="https://unpkg.com/pica/dist/pica.min.js" ></script>
+
   <!-- Loading indicator -->
   <div id="loading">
     <style>
