new init loading image: guitar cat
Signed-off-by: fantao <phantasy015@qq.com>

--- a/web/index.html
+++ b/web/index.html
@@ -104,7 +104,7 @@
         }
       }
     </style>
-    <img src="icons/chatgpt_red.png" alt="Loading indicator..." />
+    <img src="icons/cat.gif" alt="Loading indicator..." />
   </div>
 
   <script src="flutter_bootstrap.js" async></script>
