--- a/web/index.html
+++ b/web/index.html
@@ -13,8 +13,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="gallery">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
-  <link rel="icon" type="image/png" href="favicon.png" sizes="32x32" />
+  <link rel="apple-touch-icon" href="icons/cat2-192.png">
+  <link rel="icon" type="image/png" href="cat2.png" sizes="32x32" />
 
 </head>
 
@@ -104,7 +104,7 @@
         }
       }
     </style>
-    <img src="icons/cat.gif" alt="Loading indicator..." />
+    <img src="icons/cat1.gif" alt="Loading indicator..." />
   </div>
 
   <script src="flutter_bootstrap.js" async></script>
