--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,11 @@
   <link rel="apple-touch-icon" href="icons/cat2-192.png">
   <link rel="icon" type="image/png" href="cat2.png" sizes="32x32" />
 
+  <head>
+    <!-- ... -->
+    <script type="application/javascript" src="/assets/packages/flutter_inappwebview_web/assets/web/web_support.js" defer></script>
+    <!-- ... -->
+</head>
 </head>
 
 <body>
