use gitee mirror for pica.min.js
Signed-off-by: fantao <phantasy015@qq.com>

--- a/web/index.html
+++ b/web/index.html
@@ -44,7 +44,7 @@
     document.body.classList.add(theme);
   </script>
 
-  <script src="https://unpkg.com/pica/dist/pica.min.js"></script>
+  <script src="https://gitee.com/mirrors/pica/raw/master/dist/pica.min.js"></script>
 
   <!-- Loading indicator -->
   <div id="loading">
