fix app name and description
Signed-off-by: fantao <phantasy015@qq.com>

--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,8 @@
 <head>
   <base href="/">
   <meta charset="UTF-8">
-  <title>App Gallery</title>
-  <meta name="description" content="A resource to help developers evaluate and use Flutter.">
+  <title>Bots Dock</title>
+  <meta name="description" content="A Chat Bot build with OpenAI and Claude API.">
   <link rel="manifest" href="manifest.json">
 
   <!-- Browser meta tags & icons -->
