flutter_inappwebview: setup web platform
Signed-off-by: fantao <phantasy015@qq.com>

--- a/web/index.html
+++ b/web/index.html
@@ -10,11 +10,13 @@
 
   <!-- Browser meta tags & icons -->
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="gallery">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
-  <link rel="icon" type="image/png" href="icons/Icon-32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="favicon.png" sizes="32x32" />
+  <script type="application/javascript" src="/assets/packages/flutter_inappwebview_web/assets/web/web_support.js"
+    defer></script>
 
 </head>
 
